--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Shanghai
 
 title: Hanbin Zheng # the main title
 
-tagline: But a rough timber, not meant for carving. # it will display as the subtitle
+tagline: A rough timber, unsuitable for carving. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
