--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: hanbinzheng # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: hanbinzheng222 # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -38,7 +38,7 @@ social:
   email: hanbinzheng54@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
+    - https://twitter.com/hanbinzheng222 # change to your Twitter homepage
     - https://github.com/hanbinzheng # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
